# rusty-blog

backend/: Cargo.toml  diesel.toml
backend/.vim/: coc-settings.json
backend/migrations/2024-05-31-085156_create_admins/: up.sql
backend/migrations/2024-06-06-025725_create_posts/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/admin/: mod.rs
backend/src/admin/controller/: admin_controller.rs  mod.rs
backend/src/admin/dto/: admin.rs  login_request.rs  mod.rs  token.rs
backend/src/admin/entity/: admin.rs
backend/src/admin/repository/: admin_repository.rs  mod.rs
backend/src/admin/service/: authentication_service.rs  jwt_token_service.rs  mod.rs  token_service.rs
backend/src/admin/vo/: claims.rs
backend/src/config/: database.rs  mod.rs  routes.rs  tracing.rs
backend/src/core/: authorization.rs  cors_layer.rs  error.rs  error_response.rs  into_json.rs  mod.rs  page_meta.rs  page_response.rs  pageable.rs  requesta_id_generator.rs  success_response.rs
backend/src/post/: mod.rs
backend/src/post/controller/: post_controller.rs
backend/src/post/controller/admin/: mod.rs  post_controller.rs
backend/src/post/dto/: mod.rs  post.rs  post_creation.rs  post_request.rs
backend/src/post/repository/: post_repository.rs
backend/src/post/service/: mod.rs  post_creation_service.rs  post_delete_service.rs  post_fetch_service.rs  post_publish_service.rs  post_update_service.rs
frontend/: .gitignore  Cargo.toml  README.md
frontend/.vim/: coc-settings.json
frontend/src/: app.rs  lib.rs  main.rs
frontend/style/: main.scss
(+11 files in other folders)
