[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
tokio = { version = "1.37.0", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres"] }
serde = { version = "1.0.203", features = ["derive"] }
bcrypt = { version = "0.15.1" }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
dotenv = { version = "0.15.0" }
anyhow = { version = "1.0.86" }
thiserror = { version = "1.0.61" }
serde_json = { version = "1.0.117" }
