[package]
name = "rusty-blog-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
tokio = { version = "1.37.0", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
serde = { version = "1.0.203", features = ["derive"] }
bcrypt = { version = "0.15.1" }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
dotenv = { version = "0.15.0" }
thiserror = { version = "1.0.61" }
serde_json = { version = "1.0.117" }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = { version = "9.3.0" }
regex = { version = "1.10.4" }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
